--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -50,4 +50,5 @@ members = [
   "axum_htmx_templates",
   "axum_todo_utoipa_swagger_ui_example",
   "axum_userp_memory_store_oauth_only_example",
+  "axum_csrf_minimal_example",
 ]
